plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.knalis'
version = '0.0.1-SNAPSHOT'
description = 'sao_telegram_bot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2025.0.0")
    set('springDocVersion', '2.8.0')
    set('telegramBotsVersion', '6.9.0')
    set('lombokVersion', '1.18.30')
    set('postgresVersion', '42.6.0')
    set('junitPlatformVersion', '1.10.0')
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.telegram:telegrambots-spring-boot-starter:${telegramBotsVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    runtimeOnly "org.postgresql:postgresql:${postgresVersion}"

    // Actuator for health endpoints
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Spring OpenFeign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // Feign runtime
    implementation 'io.github.openfeign:feign-okhttp:12.0'

    // Jakarta annotations
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Docker Compose for Dev
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"

}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}
